--- a/atendimento.html
+++ b/atendimento.html
@@ -2,19 +2,19 @@
    <html>
 
    <head>
-      <link rel="stylesheet" href="https://epbxmanager.neobpo.com.br/Salesforce/bootstrap/css/bootstrap.min.css" />
+      <link rel="stylesheet" href="http://manager.epbx.com.br/Salesforce/bootstrap/css/bootstrap.min.css" />
 
-      <link rel="stylesheet" href="https://epbxmanager.neobpo.com.br/Salesforce/fontawesome/css/all.min.css" />
+      <link rel="stylesheet" href="http://manager.epbx.com.br/Salesforce/fontawesome/css/all.min.css" />
 
       
-      <script src="https://epbxmanager.neobpo.com.br/Service/scripts/jquery-3.1.0.min.js"></script>
-      <script src="https://epbxmanager.neobpo.com.br/Service/scripts/jquery.signalR.min.js"></script>
-      <script src="https://epbxmanager.neobpo.com.br/Service/signalr/hubs"></script>
-      <script src="https://epbxmanager.neobpo.com.br/Salesforce/epbxManagerConfig.js"></script>
-      <script src="https://epbxmanager.neobpo.com.br/Salesforce/epbxManagerConnection.js"></script>
+      <script src="http://manager.epbx.com.br/Service/scripts/jquery-3.1.0.min.js"></script>
+      <script src="http://manager.epbx.com.br/Service/scripts/jquery.signalR.min.js"></script>
+      <script src="http://manager.epbx.com.br/Service/signalr/hubs"></script>
+      <script src="http://manager.epbx.com.br/Salesforce/epbxManagerConfig.js"></script>
+      <script src="http://manager.epbx.com.br/Salesforce/epbxManagerConnection.js"></script>
 
 
-      <script src="https://epbxmanager.neobpo.com.br/Salesforce/fontawesome/js/all.min.js"></script>
+      <script src="https://manager.epbx.com.br/Salesforce/fontawesome/js/all.min.js"></script>
      
 
       <script type="text/javascript"
