--- a/atendimento.html
+++ b/atendimento.html
@@ -197,6 +197,7 @@
                .then(() => {
                   // Chamada atual ficou em espera
                   showMessage(`Consultando ${numero}`);
+                  btnTransferir.prop("disabled", false);
                })
                .fail(err => {
                   showMessage(err.message);
