--- a/atendimento.html
+++ b/atendimento.html
@@ -260,7 +260,7 @@
          }
 
          var consultaClientePorGlobalId = function (globalId) {
-            var url = 'http://manager.epbx.com.br/Renault/Api/Customer/GetByGlobalId?globalId=' + globalId;
+            var url = 'https://epbxmanager.neobpo.com.br/Renault/Api/Customer/GetByGlobalId?globalId=' + globalId;
             return $.get(url);
          }
 
